# crema-static-analyzer

./: Dockerfile  LICENSE  MEMORY_ERRORS_DISCOVERED.md  README.md  REPLICATE_RESULTS.md
SVF-example/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
SVF-example/src/: CMakeLists.txt  Makefile  cmake_install.cmake  svf-ex.cpp  svf-ex.cpp.ok
crema/: Cargo.toml  README.md  REPLICATE_RESULTS.md  build.rs  run_github_target_repositories.sh  run_tests_literals.sh  run_tests_mix_only_rust.sh  run_tests_rust_FFI.sh  rust-toolchain  z-memory_errors_found-valgrind_check.md  z-tests_report.md
crema/ffi_extraction/: Cargo.toml
crema/ffi_extraction/src/: ffi_scan.rs  main.rs
crema/src/: abstract_domain.rs  dumpdot.rs  icfg.rs  main.rs  structs.rs  utils.rs
crema/target code/: global_icfg_new_fixed_point.json  global_icfg_test.json  global_icfg_test_free_llvm.json  global_icfg_test_internal_fn.json
query_github_rust_prj/: README.md
query_github_rust_prj/cfc/: Cargo.toml
query_github_rust_prj/cfc/src/: github.rs  main.rs
tests_and_target_repos/: README.md  cargo_build_all_dirs.sh  cargo_clean_all_dirs.sh
tests_and_target_repos/a-code_c_ffi/branch_df_mem_leak_ffi/: Cargo.toml
tests_and_target_repos/a-code_c_ffi/clean_mul_fn_ffi_no_errors/: Cargo.toml
tests_and_target_repos/a-code_c_ffi/cstr_cargo_df_ffi/: Cargo.toml
tests_and_target_repos/a-code_c_ffi/cstr_expect_uaf_and_ub_ffi/: build.rs
tests_and_target_repos/a-code_c_ffi/cstringcargo_df_ffi/: Cargo.toml
tests_and_target_repos/a-code_c_ffi/df_rand_cargo_c_ffi/: Cargo.toml
(+140 files in other folders)
