[package]
name = "crema"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ffi_extraction"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.25"
toml = "0.8.20"
cargo_metadata = "0.19.2"
camino = "1.1.9"
walkdir = "2.5.0"

regex = "1.11.1"
once_cell = "1.21.3"




[build-dependencies]
cc = "1.2.17"
walkdir = "2.5.0"