[package]
name = "cfc"
version = "0.1.0"
edition = "2021"

[dependencies]
crates_io_api = "0.11.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
serde = {version="1.0.219", feature="derive"}
serde_json = "1.0.140"
serde_derive = "1.0.219"
tokio-stream = "0.1.17"
futures = "0.3.31"
#reqwest = "0.12.15"
#reqwest = { version = "0.10.0", default-features = false, features = ["json", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
future-utils = "0.12.1"
futures-util = "0.3.31"
urlencoding = "2.1.3"

